Setting user id for pages on window load i Please enter the commit message for your changes. Lines starting

--- a/web/managestudies.html
+++ b/web/managestudies.html
@@ -63,7 +63,7 @@ and open the template in the editor.
 
                 var userid = document.getElementById("userid").value;
                 
-                alert(userid);
+      //          alert(userid);
                 
                 var command = "getAllStudyNames";
                 var url = "StudySetup?command=" + command + "&userid=" + userid;
