--- a/web/userstudy_setup.html
+++ b/web/userstudy_setup.html
@@ -144,7 +144,7 @@ and open the template in the editor.
 
                 //get management command of this setup.
                 
-                setUserId(loadManagementCommand());
+                setUserId(loadManagementCommand);
             };
 
             function loadManagementCommand() {
