integrating the task instances functionality to the visunit interface

--- a/web/temporal_interface/visunit.html
+++ b/web/temporal_interface/visunit.html
@@ -212,6 +212,7 @@
                 border: solid #000;
                 padding: 10px;   
                 margin-right: 20px;
+                background: white;
             }
 
 
@@ -3054,7 +3055,7 @@
 
                                                                                                                                                                                                         <!-- managing window -->
                                                                                                                                                                                                         <div id="propControl">  
-                                                                                                                                                                                                            <h4 style="margin-top: 0px;">Select task instances for the task listed below.</h4>
+                                                                                                                                                                                                            <h4 style="margin-top: 0px;">Provide task instances for the task listed below.</h4>
                                                                                                                                                                                                             <p id="task"><strong>Task: </strong></p>
                                                                                                                                                                                                             <hr />
 
@@ -3209,7 +3210,7 @@
                                                                                                                                                                                                         </div>    
                                                                                                                                                                                                         <p>  <input type="button" id="nextInstance" value="Go to Next Instance" onclick="saveInstance();" disabled/></p>
                                                                                                                                                                                                         <hr/>
-                                                                                                                                                                                                        <p><input type="button" value="Save All Instances" onclick="saveAllTaskInstances();"/></p>
+                                                                                                                                                                                                        <!--<p><input type="button" value="Save All Instances" onclick="saveAllTaskInstances();"/></p> -->
 
                                                                                                                                                                                                         </div>
 
